--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <div class="row">
-    <app-user *ngFor='let user of users' [user]='user'></app-user>
+    <div class="input-field col s6">
+      <input value="" id="first_name2" type="text" class="validate" [(ngModel)]='searchStr'>
+      <label class="active" for="first_name2">Searching Name</label>
+    </div>
+    <div class="btn-block col">
+      <app-btn-toggle></app-btn-toggle>
+    </div>
   </div>
-  <div class="btn-block">
-    <app-btn-toggle></app-btn-toggle>
+  <div class="row">
+    <app-user *ngFor='let user of users | search:searchStr' [user]='user'></app-user>
   </div>
 </div>
