--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,15 +1,15 @@
-<div class="col s12 m3">
-  <div class="card">
+<div class="col s12 m4 l3">
+  <div class="card" appHover>
     <div class="card-image">
       <img src="{{user.img}}">
-      <span class="card-title">{{ user.name }}</span>
+      <span class="card-title" [ngClass] = "{'checked': isChecked}">{{user.name | uppercase}}</span>
     </div>
     <div class="card-content">
       <p>{{user.adress}}</p>
       <p>tel: +{{user.phone}}</p>
     </div>
     <div class="card-action">
-      <a href="#">This is a link</a>
+      <a (click)="onClick()" class="waves-effect waves-light btn-small">Checked</a>
     </div>
   </div>
 </div>
