--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,28 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo">App</a>
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+      <i class="material-icons">menu</i>
+    </a>
+    <ul class="right hide-on-med-and-down">
+      <li>
+        <a routerLink="/">main</a>
+      </li>
+      <li>
+        <a routerLink="/setup">settings</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<ul class="sidenav" id="mobile-demo">
+  <li>
+    <a routerLink="/">main</a>
+  </li>
+  <li>
+    <a routerLink="/setup">settings</a>
+  </li>
+</ul>
 <div class="container">
-  <div class="row">
-    <div class="input-field col s6">
-      <input value="" id="first_name2" type="text" class="validate" [(ngModel)]='searchStr'>
-      <label class="active" for="first_name2">Searching Name</label>
-    </div>
-    <div class="btn-block col">
-      <app-btn-toggle></app-btn-toggle>
-    </div>
-  </div>
-  <div class="row">
-    <app-user *ngFor='let user of users | search:searchStr' [user]='user'></app-user>
-  </div>
+  <router-outlet></router-outlet>
 </div>
