btn toggle bg theme to dark

--- a/src/app/user/btn-toggle/btn-toggle.component.html
+++ b/src/app/user/btn-toggle/btn-toggle.component.html
@@ -1,1 +1,1 @@
-<a class="waves-effect waves-light btn-small">Toggle {{ name.dark }}-theme</a>
+<a class="waves-effect waves-light btn-small" (click)="changeBackground(); change();">Toggle {{ color }}-theme</a>
