--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,10 +3,10 @@
     <input value="" id="first_name2" type="text" class="validate" [(ngModel)]='searchStr'>
     <label class="active" for="first_name2">Searching Name</label>
   </div>
-  <div class="btn-block col">
-    <app-btn-toggle></app-btn-toggle>
+  <div class="btn-block col" >
+    <app-btn-toggle (onChange)='onChange($event)'></app-btn-toggle>
   </div>
 </div>
-<div class="row">
+<div class="row" [ngClass]="theme">
   <app-user *ngFor='let user of users | search:searchStr' [user]='user'></app-user>
 </div>
