--- a/src/app/setup-page/setup-page.component.html
+++ b/src/app/setup-page/setup-page.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="input-field col s6">
-    <input [(ngModel)]="size" id="first_name2" type="text" class="validate">
+    <input [(ngModel)]="size" type="text" [class]='myColor'>
     <label class="active" for="first_name2">number of users</label>
   </div>
-  <a class="waves-effect waves-light btn col s12" (click)="onChange()">change</a>
+  <a class="waves-effect waves-light btn col s12" (click)="onChange(); changeColor()">change</a>
 </div>
